# hiv_project_etl

./: .dockerignore  .gitignore  Dockerfile  FARGATE_MIGRATION_PLAN.md  MIGRATION_PLAN.md  README.md  create_ddl.py  ec2_run.sh  export_redcap_hiv.ipynb  labkey_load_project_1_1.py  main.py  main_labkey_test.py  pyproject.toml  requirements.txt  requiremments.txt  script_runner.sh  test_db_connection.py
config/: config.py  redcap_tokens.yaml
data_dictionaries/: AdultHIVClinicalAbstr_DataDict_2024-10-30.csv  AdultHIVClinicalAbstr_DataDict_2024-10-31.csv  AdultHIVClinicalAbstr_DataDict_2024-11-01.csv  AdultHIVClinicalAbstr_DataDict_append.csv  AdultHIVProject1_1_DataDict_2024-12-11.csv  AdultHIVProject1_1_DataDict_2024-12-12.csv  AdultHIVProject1_1_DataDict_2024-12-13.csv  AdultHIVProject1_1_DataDict_append.csv  AdultHIVProject3_1_DataDict_2024-11-07.csv  AdultHIVProject3_1_DataDict_2025-01-28.csv  AdultHIVProject3_1_DataDict_2025-01-28_OLD.csv  AdultHIVProject3_1_DataDict_2025-01-28_v1.csv  AdultHIVProject3_1_DataDict_append.csv  AdultHIVProject6_1_DataDict_2025-11-12.csv  AdultHIVProject6_1_DataDict_2025-11-12_active.csv  AdultHIVProject6_1_DataDict_append.csv
docs/: catalog.json  manifest.json
include/: aws_secrets.py  ci_slack.py  ci_utils copy.py  ci_utils.py  ci_utils_orig.py  ci_utils_original.py  ci_utils_snair.py
scripts/: check_dups.py  load_hiv_6_1_data.py  test_consent_auth_upsert.py  test_cplwidget_upsert.py  test_flat_pagination.py  test_vw_cplwidget_query.py
src/: create_data_dict_df.py  data_quality.py  db_load_abstraction.py  db_load_project_1_1.py  (+14 more)
(+91 files in other folders)
